Created get tags method and mapping index

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="modules/shared/directive/author.js"></script>
     <script src="modules/shared/directive/featuredImage.js"></script>
     <script src="modules/shared/directive/comments.js"></script>
+    <script src="modules/shared/directive/tags.js"></script>
 
     <script src="modules/home/home.module.js"></script>
     <script src="modules/home/home.controller.js"></script>
