--- a/modules/home/home.view.html
+++ b/modules/home/home.view.html
@@ -41,6 +41,9 @@
         <div class="col-md-4">
             <categories></categories>
         </div>
+        <div class="col-md-4">
+            <tags></tags>
+        </div>
 
     </div>
 
