added author and category page

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
     <script src="modules/post/post.module.js"></script>
     <script src="modules/post/post.controller.js"></script>
 
+    <script src="modules/author/author.module.js"></script>
+    <script src="modules/author/author.controller.js"></script>
+
+    <script src="modules/category/category.module.js"></script>
+    <script src="modules/category/category.controller.js"></script>
+
     <title>{{metaTitle}}</title>
 
 </head>
